Improved boundary checks for overlays